// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panels Table Component renders empty panel table container 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <Component
    addSamplePanels={[MockFunction]}
    cloneCustomPanel={[MockFunction]}
    createCustomPanel={[MockFunction]}
    customPanels={Array []}
    deleteCustomPanelList={[MockFunction]}
    fetchCustomPanels={[MockFunction]}
    loading={false}
    parentBreadcrumbs={
      Array [
        Object {
          "href": "#/operational_panels/",
          "text": "Operational panels",
        },
        Object {
          "href": "observability#/",
          "text": "Observability",
        },
      ]
    }
    renameCustomPanel={[MockFunction]}
    setBreadcrumbs={
      [MockFunction] {
        "calls": Array [
          Array [
            Array [
              Object {
                "href": "#/operational_panels/",
                "text": "Operational panels",
              },
              Object {
                "href": "observability#/",
                "text": "Observability",
              },
            ],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <div
      style={
        Object {
          "float": "left",
          "maxWidth": "1130px",
          "width": "100%",
        }
      }
    >
      <EuiPage>
        <div
          className="euiPage euiPage--paddingMedium euiPage--grow"
        >
          <EuiPageBody
            component="div"
          >
            <div
              className="euiPageBody euiPageBody--borderRadiusNone"
            >
              <EuiPageHeader>
                <header
                  className="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
                >
                  <EuiPageHeaderSection>
                    <div
                      className="euiPageHeaderSection"
                    >
                      <EuiTitle
                        size="l"
                      >
                        <h1
                          className="euiTitle euiTitle--large"
                        >
                          Observability dashboards
                        </h1>
                      </EuiTitle>
                    </div>
                  </EuiPageHeaderSection>
                </header>
              </EuiPageHeader>
              <EuiPageContent
                id="customPanelArea"
              >
                <EuiPanel
                  className="euiPageContent"
                  id="customPanelArea"
                  paddingSize="l"
                  role="main"
                >
                  <div
                    className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
                    id="customPanelArea"
                    role="main"
                  >
                    <EuiPageContentHeader>
                      <div
                        className="euiPageContentHeader euiPageContentHeader--responsive"
                      >
                        <EuiPageContentHeaderSection>
                          <div
                            className="euiPageContentHeaderSection"
                          >
                            <EuiTitle
                              size="s"
                            >
                              <h3
                                className="euiTitle euiTitle--small"
                              >
                                Dashboard
                                <span
                                  className="panel-header-count"
                                >
                                   (
                                  0
                                  )
                                </span>
                              </h3>
                            </EuiTitle>
                            <EuiSpacer
                              size="s"
                            >
                              <div
                                className="euiSpacer euiSpacer--s"
                              />
                            </EuiSpacer>
                            <EuiText
                              color="subdued"
                              size="s"
                            >
                              <div
                                className="euiText euiText--small"
                              >
                                <EuiTextColor
                                  color="subdued"
                                  component="div"
                                >
                                  <div
                                    className="euiTextColor euiTextColor--subdued"
                                  >
                                    Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                                     
                                    <EuiLink
                                      external={true}
                                      href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                                      target="blank"
                                    >
                                      <a
                                        className="euiLink euiLink--primary"
                                        href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                                        rel="noreferrer"
                                        target="blank"
                                      >
                                        Learn more
                                        <EuiIcon
                                          aria-label="External link"
                                          className="euiLink__externalIcon"
                                          size="s"
                                          type="popout"
                                        >
                                          <EuiIconEmpty
                                            aria-hidden={true}
                                            aria-label="External link"
                                            className="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                                            focusable="false"
                                            role="img"
                                            style={null}
                                          >
                                            <svg
                                              aria-hidden={true}
                                              aria-label="External link"
                                              className="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
                                              focusable="false"
                                              height={16}
                                              role="img"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width={16}
                                              xmlns="http://www.w3.org/2000/svg"
                                            />
                                          </EuiIconEmpty>
                                        </EuiIcon>
                                      </a>
                                    </EuiLink>
                                  </div>
                                </EuiTextColor>
                              </div>
                            </EuiText>
                          </div>
                        </EuiPageContentHeaderSection>
                        <EuiPageContentHeaderSection>
                          <div
                            className="euiPageContentHeaderSection"
                          >
                            <EuiFlexGroup
                              gutterSize="s"
                            >
                              <div
                                className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                              >
                                <EuiFlexItem>
                                  <div
                                    className="euiFlexItem"
                                  >
                                    <EuiPopover
                                      anchorPosition="downCenter"
                                      button={
                                        <EuiButton
                                          data-test-subj="operationalPanelsActionsButton"
                                          iconSide="right"
                                          iconType="arrowDown"
                                          onClick={[Function]}
                                        >
                                          Actions
                                        </EuiButton>
                                      }
                                      closePopover={[Function]}
                                      display="inlineBlock"
                                      hasArrow={true}
                                      isOpen={false}
                                      ownFocus={true}
                                      panelPaddingSize="none"
                                    >
                                      <div
                                        className="euiPopover euiPopover--anchorDownCenter"
                                      >
                                        <div
                                          className="euiPopover__anchor"
                                        >
                                          <EuiButton
                                            data-test-subj="operationalPanelsActionsButton"
                                            iconSide="right"
                                            iconType="arrowDown"
                                            onClick={[Function]}
                                          >
                                            <EuiButtonDisplay
                                              baseClassName="euiButton"
                                              data-test-subj="operationalPanelsActionsButton"
                                              disabled={false}
                                              element="button"
                                              iconSide="right"
                                              iconType="arrowDown"
                                              isDisabled={false}
                                              onClick={[Function]}
                                              type="button"
                                            >
                                              <button
                                                className="euiButton euiButton--primary"
                                                data-test-subj="operationalPanelsActionsButton"
                                                disabled={false}
                                                onClick={[Function]}
                                                style={
                                                  Object {
                                                    "minWidth": undefined,
                                                  }
                                                }
                                                type="button"
                                              >
                                                <EuiButtonContent
                                                  className="euiButton__content"
                                                  iconSide="right"
                                                  iconType="arrowDown"
                                                  textProps={
                                                    Object {
                                                      "className": "euiButton__text",
                                                    }
                                                  }
                                                >
                                                  <span
                                                    className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                                                  >
                                                    <EuiIcon
                                                      className="euiButtonContent__icon"
                                                      color="inherit"
                                                      size="m"
                                                      type="arrowDown"
                                                    >
                                                      <EuiIconEmpty
                                                        aria-hidden={true}
                                                        className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                                        focusable="false"
                                                        role="img"
                                                        style={null}
                                                      >
                                                        <svg
                                                          aria-hidden={true}
                                                          className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                                                          focusable="false"
                                                          height={16}
                                                          role="img"
                                                          style={null}
                                                          viewBox="0 0 16 16"
                                                          width={16}
                                                          xmlns="http://www.w3.org/2000/svg"
                                                        />
                                                      </EuiIconEmpty>
                                                    </EuiIcon>
                                                    <span
                                                      className="euiButton__text"
                                                    >
                                                      Actions
                                                    </span>
                                                  </span>
                                                </EuiButtonContent>
                                              </button>
                                            </EuiButtonDisplay>
                                          </EuiButton>
                                        </div>
                                      </div>
                                    </EuiPopover>
                                  </div>
                                </EuiFlexItem>
                                <EuiFlexItem>
                                  <div
                                    className="euiFlexItem"
                                  >
                                    <EuiButton
                                      data-test-subj="customPanels__createNewPanels"
                                      fill={true}
                                      href="#/create"
                                    >
                                      <EuiButtonDisplay
                                        baseClassName="euiButton"
                                        data-test-subj="customPanels__createNewPanels"
                                        element="a"
                                        fill={true}
                                        href="#/create"
                                        isDisabled={false}
                                        rel="noreferrer"
                                      >
                                        <a
                                          className="euiButton euiButton--primary euiButton--fill"
                                          data-test-subj="customPanels__createNewPanels"
                                          disabled={false}
                                          href="#/create"
                                          rel="noreferrer"
                                          style={
                                            Object {
                                              "minWidth": undefined,
                                            }
                                          }
                                        >
                                          <EuiButtonContent
                                            className="euiButton__content"
                                            iconSide="left"
                                            textProps={
                                              Object {
                                                "className": "euiButton__text",
                                              }
                                            }
                                          >
                                            <span
                                              className="euiButtonContent euiButton__content"
                                            >
                                              <span
                                                className="euiButton__text"
                                              >
                                                Create Dashboard
                                              </span>
                                            </span>
                                          </EuiButtonContent>
                                        </a>
                                      </EuiButtonDisplay>
                                    </EuiButton>
                                  </div>
                                </EuiFlexItem>
                              </div>
                            </EuiFlexGroup>
                          </div>
                        </EuiPageContentHeaderSection>
                      </div>
                    </EuiPageContentHeader>
                    <EuiHorizontalRule
                      margin="m"
                    >
                      <hr
                        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
                      />
                    </EuiHorizontalRule>
                    <EuiSpacer
                      size="xxl"
                    >
                      <div
                        className="euiSpacer euiSpacer--xxl"
                      />
                    </EuiSpacer>
                    <EuiText
                      textAlign="center"
                    >
                      <div
                        className="euiText euiText--medium"
                      >
                        <EuiTextAlign
                          textAlign="center"
                        >
                          <div
                            className="euiTextAlign euiTextAlign--center"
                          >
                            <h2
                              data-test-subj="customPanels__noPanelsHome"
                            >
                              No Observability Dashboards
                            </h2>
                            <EuiSpacer
                              size="m"
                            >
                              <div
                                className="euiSpacer euiSpacer--m"
                              />
                            </EuiSpacer>
                            <EuiText
                              color="subdued"
                            >
                              <div
                                className="euiText euiText--medium"
                              >
                                <EuiTextColor
                                  color="subdued"
                                  component="div"
                                >
                                  <div
                                    className="euiTextColor euiTextColor--subdued"
                                  >
                                    Use Observability Dashboards to dive deeper into observability
                                    <br />
                                    using PPL queries and insightful visualizations
                                  </div>
                                </EuiTextColor>
                              </div>
                            </EuiText>
                          </div>
                        </EuiTextAlign>
                      </div>
                    </EuiText>
                    <EuiSpacer
                      size="m"
                    >
                      <div
                        className="euiSpacer euiSpacer--m"
                      />
                    </EuiSpacer>
                    <EuiFlexGroup
                      justifyContent="center"
                    >
                      <div
                        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          grow={false}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              data-test-subj="customPanels__emptyCreateNewPanels"
                              fullWidth={false}
                              href="#/create"
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                data-test-subj="customPanels__emptyCreateNewPanels"
                                element="a"
                                fullWidth={false}
                                href="#/create"
                                isDisabled={false}
                                rel="noreferrer"
                              >
                                <a
                                  className="euiButton euiButton--primary"
                                  data-test-subj="customPanels__emptyCreateNewPanels"
                                  disabled={false}
                                  href="#/create"
                                  rel="noreferrer"
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <span
                                        className="euiButton__text"
                                      >
                                        Create Dashboard
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </a>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                        <EuiFlexItem
                          grow={false}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              fullWidth={false}
                              onClick={[Function]}
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                disabled={false}
                                element="button"
                                fullWidth={false}
                                isDisabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <button
                                  className="euiButton euiButton--primary"
                                  disabled={false}
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                  type="button"
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <span
                                        className="euiButton__text"
                                      >
                                        Add samples
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </button>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexGroup>
                    <EuiSpacer
                      size="xxl"
                    >
                      <div
                        className="euiSpacer euiSpacer--xxl"
                      />
                    </EuiSpacer>
                  </div>
                </EuiPanel>
              </EuiPageContent>
            </div>
          </EuiPageBody>
        </div>
      </EuiPage>
    </div>
  </Component>
</Provider>
`;

exports[`Panels Table Component renders panel table container 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <Component
    addSamplePanels={[MockFunction]}
    cloneCustomPanel={[MockFunction]}
    createCustomPanel={[MockFunction]}
    customPanels={
      Array [
        Object {
          "dateCreated": 1635974761179,
          "dateModified": 1635974771296,
          "id": "L8Sx53wBDp0rvEg3yoLb",
          "name": "Test Panel 1",
        },
        Object {
          "dateCreated": 1635545733895,
          "dateModified": 1635979024055,
          "id": "lsQfznwBDp0rvEg3W2wH",
          "name": "Test Panel 2",
        },
        Object {
          "dateCreated": 1635889452900,
          "dateModified": 1635979888682,
          "id": "b8Sc4nwBDp0rvEg3F3Fk",
          "name": "Test Panel 3",
        },
        Object {
          "dateCreated": 1635881186494,
          "dateModified": 1636049456718,
          "id": "P8Qd4nwBDp0rvEg39HG_",
          "name": "Test Panel 4",
        },
      ]
    }
    deleteCustomPanelList={[MockFunction]}
    fetchCustomPanels={[MockFunction]}
    loading={false}
    parentBreadcrumbs={
      Array [
        Object {
          "href": "#/operational_panels/",
          "text": "Operational panels",
        },
        Object {
          "href": "observability#/",
          "text": "Observability",
        },
      ]
    }
    renameCustomPanel={[MockFunction]}
    setBreadcrumbs={
      [MockFunction] {
        "calls": Array [
          Array [
            Array [
              Object {
                "href": "#/operational_panels/",
                "text": "Operational panels",
              },
              Object {
                "href": "observability#/",
                "text": "Observability",
              },
            ],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <div
      style={
        Object {
          "float": "left",
          "maxWidth": "1130px",
          "width": "100%",
        }
      }
    >
      <EuiPage>
        <div
          className="euiPage euiPage--paddingMedium euiPage--grow"
        >
          <EuiPageBody
            component="div"
          >
            <div
              className="euiPageBody euiPageBody--borderRadiusNone"
            >
              <EuiPageHeader>
                <header
                  className="euiPageHeader euiPageHeader--responsive euiPageHeader--center"
                >
                  <EuiPageHeaderSection>
                    <div
                      className="euiPageHeaderSection"
                    >
                      <EuiTitle
                        size="l"
                      >
                        <h1
                          className="euiTitle euiTitle--large"
                        >
                          Observability dashboards
                        </h1>
                      </EuiTitle>
                    </div>
                  </EuiPageHeaderSection>
                </header>
              </EuiPageHeader>
              <EuiPageContent
                id="customPanelArea"
              >
                <EuiPanel
                  className="euiPageContent"
                  id="customPanelArea"
                  paddingSize="l"
                  role="main"
                >
                  <div
                    className="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
                    id="customPanelArea"
                    role="main"
                  >
                    <EuiPageContentHeader>
                      <div
                        className="euiPageContentHeader euiPageContentHeader--responsive"
                      >
                        <EuiPageContentHeaderSection>
                          <div
                            className="euiPageContentHeaderSection"
                          >
                            <EuiTitle
                              size="s"
                            >
                              <h3
                                className="euiTitle euiTitle--small"
                              >
                                Dashboard
                                <span
                                  className="panel-header-count"
                                >
                                   (
                                  0
                                  )
                                </span>
                              </h3>
                            </EuiTitle>
                            <EuiSpacer
                              size="s"
                            >
                              <div
                                className="euiSpacer euiSpacer--s"
                              />
                            </EuiSpacer>
                            <EuiText
                              color="subdued"
                              size="s"
                            >
                              <div
                                className="euiText euiText--small"
                              >
                                <EuiTextColor
                                  color="subdued"
                                  component="div"
                                >
                                  <div
                                    className="euiTextColor euiTextColor--subdued"
                                  >
                                    Use Observability Dashboard to create and view different visualizations on ingested observability data, using PPL (Piped Processing Language) queries.
                                     
                                    <EuiLink
                                      external={true}
                                      href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                                      target="blank"
                                    >
                                      <a
                                        className="euiLink euiLink--primary"
                                        href="https://opensearch.org/docs/latest/observability-plugin/operational-panels/"
                                        rel="noreferrer"
                                        target="blank"
                                      >
                                        Learn more
                                        <EuiIcon
                                          aria-label="External link"
                                          className="euiLink__externalIcon"
                                          size="s"
                                          type="popout"
                                        >
                                          <EuiIconPopout
                                            aria-label="External link"
                                            className="euiIcon euiIcon--small euiLink__externalIcon"
                                            focusable="false"
                                            role="img"
                                            style={null}
                                          >
                                            <svg
                                              aria-label="External link"
                                              className="euiIcon euiIcon--small euiLink__externalIcon"
                                              focusable="false"
                                              height={16}
                                              role="img"
                                              style={null}
                                              viewBox="0 0 16 16"
                                              width={16}
                                              xmlns="http://www.w3.org/2000/svg"
                                            >
                                              <path
                                                d="M13 8.5a.5.5 0 1 1 1 0V12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h3.5a.5.5 0 0 1 0 1H4a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V8.5Zm-5.12.339a.5.5 0 1 1-.706-.707L13.305 2H10.5a.5.5 0 1 1 0-1H14a1 1 0 0 1 1 1v3.5a.5.5 0 1 1-1 0V2.72L7.88 8.838Z"
                                              />
                                            </svg>
                                          </EuiIconPopout>
                                        </EuiIcon>
                                      </a>
                                    </EuiLink>
                                  </div>
                                </EuiTextColor>
                              </div>
                            </EuiText>
                          </div>
                        </EuiPageContentHeaderSection>
                        <EuiPageContentHeaderSection>
                          <div
                            className="euiPageContentHeaderSection"
                          >
                            <EuiFlexGroup
                              gutterSize="s"
                            >
                              <div
                                className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiFlexGroup--responsive"
                              >
                                <EuiFlexItem>
                                  <div
                                    className="euiFlexItem"
                                  >
                                    <EuiPopover
                                      anchorPosition="downCenter"
                                      button={
                                        <EuiButton
                                          data-test-subj="operationalPanelsActionsButton"
                                          iconSide="right"
                                          iconType="arrowDown"
                                          onClick={[Function]}
                                        >
                                          Actions
                                        </EuiButton>
                                      }
                                      closePopover={[Function]}
                                      display="inlineBlock"
                                      hasArrow={true}
                                      isOpen={false}
                                      ownFocus={true}
                                      panelPaddingSize="none"
                                    >
                                      <div
                                        className="euiPopover euiPopover--anchorDownCenter"
                                      >
                                        <div
                                          className="euiPopover__anchor"
                                        >
                                          <EuiButton
                                            data-test-subj="operationalPanelsActionsButton"
                                            iconSide="right"
                                            iconType="arrowDown"
                                            onClick={[Function]}
                                          >
                                            <EuiButtonDisplay
                                              baseClassName="euiButton"
                                              data-test-subj="operationalPanelsActionsButton"
                                              disabled={false}
                                              element="button"
                                              iconSide="right"
                                              iconType="arrowDown"
                                              isDisabled={false}
                                              onClick={[Function]}
                                              type="button"
                                            >
                                              <button
                                                className="euiButton euiButton--primary"
                                                data-test-subj="operationalPanelsActionsButton"
                                                disabled={false}
                                                onClick={[Function]}
                                                style={
                                                  Object {
                                                    "minWidth": undefined,
                                                  }
                                                }
                                                type="button"
                                              >
                                                <EuiButtonContent
                                                  className="euiButton__content"
                                                  iconSide="right"
                                                  iconType="arrowDown"
                                                  textProps={
                                                    Object {
                                                      "className": "euiButton__text",
                                                    }
                                                  }
                                                >
                                                  <span
                                                    className="euiButtonContent euiButtonContent--iconRight euiButton__content"
                                                  >
                                                    <EuiIcon
                                                      className="euiButtonContent__icon"
                                                      color="inherit"
                                                      size="m"
                                                      type="arrowDown"
                                                    >
                                                      <EuiIconArrowDown
                                                        aria-hidden={true}
                                                        className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                                                        focusable="false"
                                                        role="img"
                                                        style={null}
                                                      >
                                                        <svg
                                                          aria-hidden={true}
                                                          className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                                                          focusable="false"
                                                          height={16}
                                                          role="img"
                                                          style={null}
                                                          viewBox="0 0 16 16"
                                                          width={16}
                                                          xmlns="http://www.w3.org/2000/svg"
                                                        >
                                                          <path
                                                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                                                            fillRule="non-zero"
                                                          />
                                                        </svg>
                                                      </EuiIconArrowDown>
                                                    </EuiIcon>
                                                    <span
                                                      className="euiButton__text"
                                                    >
                                                      Actions
                                                    </span>
                                                  </span>
                                                </EuiButtonContent>
                                              </button>
                                            </EuiButtonDisplay>
                                          </EuiButton>
                                        </div>
                                      </div>
                                    </EuiPopover>
                                  </div>
                                </EuiFlexItem>
                                <EuiFlexItem>
                                  <div
                                    className="euiFlexItem"
                                  >
                                    <EuiButton
                                      data-test-subj="customPanels__createNewPanels"
                                      fill={true}
                                      href="#/create"
                                    >
                                      <EuiButtonDisplay
                                        baseClassName="euiButton"
                                        data-test-subj="customPanels__createNewPanels"
                                        element="a"
                                        fill={true}
                                        href="#/create"
                                        isDisabled={false}
                                        rel="noreferrer"
                                      >
                                        <a
                                          className="euiButton euiButton--primary euiButton--fill"
                                          data-test-subj="customPanels__createNewPanels"
                                          disabled={false}
                                          href="#/create"
                                          rel="noreferrer"
                                          style={
                                            Object {
                                              "minWidth": undefined,
                                            }
                                          }
                                        >
                                          <EuiButtonContent
                                            className="euiButton__content"
                                            iconSide="left"
                                            textProps={
                                              Object {
                                                "className": "euiButton__text",
                                              }
                                            }
                                          >
                                            <span
                                              className="euiButtonContent euiButton__content"
                                            >
                                              <span
                                                className="euiButton__text"
                                              >
                                                Create Dashboard
                                              </span>
                                            </span>
                                          </EuiButtonContent>
                                        </a>
                                      </EuiButtonDisplay>
                                    </EuiButton>
                                  </div>
                                </EuiFlexItem>
                              </div>
                            </EuiFlexGroup>
                          </div>
                        </EuiPageContentHeaderSection>
                      </div>
                    </EuiPageContentHeader>
                    <EuiHorizontalRule
                      margin="m"
                    >
                      <hr
                        className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginMedium"
                      />
                    </EuiHorizontalRule>
                    <EuiSpacer
                      size="xxl"
                    >
                      <div
                        className="euiSpacer euiSpacer--xxl"
                      />
                    </EuiSpacer>
                    <EuiText
                      textAlign="center"
                    >
                      <div
                        className="euiText euiText--medium"
                      >
                        <EuiTextAlign
                          textAlign="center"
                        >
                          <div
                            className="euiTextAlign euiTextAlign--center"
                          >
                            <h2
                              data-test-subj="customPanels__noPanelsHome"
                            >
                              No Observability Dashboards
                            </h2>
                            <EuiSpacer
                              size="m"
                            >
                              <div
                                className="euiSpacer euiSpacer--m"
                              />
                            </EuiSpacer>
                            <EuiText
                              color="subdued"
                            >
                              <div
                                className="euiText euiText--medium"
                              >
                                <EuiTextColor
                                  color="subdued"
                                  component="div"
                                >
                                  <div
                                    className="euiTextColor euiTextColor--subdued"
                                  >
                                    Use Observability Dashboards to dive deeper into observability
                                    <br />
                                    using PPL queries and insightful visualizations
                                  </div>
                                </EuiTextColor>
                              </div>
                            </EuiText>
                          </div>
                        </EuiTextAlign>
                      </div>
                    </EuiText>
                    <EuiSpacer
                      size="m"
                    >
                      <div
                        className="euiSpacer euiSpacer--m"
                      />
                    </EuiSpacer>
                    <EuiFlexGroup
                      justifyContent="center"
                    >
                      <div
                        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          grow={false}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              data-test-subj="customPanels__emptyCreateNewPanels"
                              fullWidth={false}
                              href="#/create"
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                data-test-subj="customPanels__emptyCreateNewPanels"
                                element="a"
                                fullWidth={false}
                                href="#/create"
                                isDisabled={false}
                                rel="noreferrer"
                              >
                                <a
                                  className="euiButton euiButton--primary"
                                  data-test-subj="customPanels__emptyCreateNewPanels"
                                  disabled={false}
                                  href="#/create"
                                  rel="noreferrer"
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <span
                                        className="euiButton__text"
                                      >
                                        Create Dashboard
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </a>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                        <EuiFlexItem
                          grow={false}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrowZero"
                          >
                            <EuiButton
                              fullWidth={false}
                              onClick={[Function]}
                            >
                              <EuiButtonDisplay
                                baseClassName="euiButton"
                                disabled={false}
                                element="button"
                                fullWidth={false}
                                isDisabled={false}
                                onClick={[Function]}
                                type="button"
                              >
                                <button
                                  className="euiButton euiButton--primary"
                                  disabled={false}
                                  onClick={[Function]}
                                  style={
                                    Object {
                                      "minWidth": undefined,
                                    }
                                  }
                                  type="button"
                                >
                                  <EuiButtonContent
                                    className="euiButton__content"
                                    iconSide="left"
                                    textProps={
                                      Object {
                                        "className": "euiButton__text",
                                      }
                                    }
                                  >
                                    <span
                                      className="euiButtonContent euiButton__content"
                                    >
                                      <span
                                        className="euiButton__text"
                                      >
                                        Add samples
                                      </span>
                                    </span>
                                  </EuiButtonContent>
                                </button>
                              </EuiButtonDisplay>
                            </EuiButton>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexGroup>
                    <EuiSpacer
                      size="xxl"
                    >
                      <div
                        className="euiSpacer euiSpacer--xxl"
                      />
                    </EuiSpacer>
                  </div>
                </EuiPanel>
              </EuiPageContent>
            </div>
          </EuiPageBody>
        </div>
      </EuiPage>
    </div>
  </Component>
</Provider>
`;
